--- a/templates/continut.html
+++ b/templates/continut.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Students Info</title>
-    </head>
-    <body>
-        {% for student in students %}
-            <h1>{{userplatform.first_name}} {{userplatform.last_name}}, {{userplatform.age}}, {{userplatform.gender}}</h1>
-
-        {% endfor %}
-    </body>
-</html>
+{#<!DOCTYPE html>#}
+{#<html>#}
+{#    <head>#}
+{#        <title>Students Info</title>#}
+{#    </head>#}
+{#    <body>#}
+{#        {% for user in users %}#}
+{#            <h1>{{usermentor.first_name}} {{usermentor.last_name}}, {{usermentor.age}}, {{userplatform.gender}}</h1>#}
+{##}
+{#        {% endfor %}#}
+{#    </body>#}
+{#</html>#}
