--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -30,25 +30,20 @@
 {#          <a class="nav-link" href="{% url 'add-student' %}">Add Students</a>#}
 {#        </li>#}
 {#      {% endif %}#}
-{#      {% if not request.user.is_authenticated %}#}
+      {% if not request.user.is_authenticated %}
         <li class="nav-item" >
           <a class="nav-link" href="{% url 'login' %}">Log-in</a>
         </li>
-{#        <li class="nav-item" >#}
-{#          <a class="nav-link" href="{% url 'otherlogin' %}"> Other Log-in</a>#}
-{#        </li>#}
+      {% endif %}
+      {% if request.user.is_authenticated %}
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'signup' %}">Sign-up</a>
-        </li>
-{#      {% endif %}#}
-{#      {% if request.user.is_authenticated %}#}
-        <li class="nav-item">
-{#<!--          <button type="submit" onclick="return confirm('Are you sure?');">-->#}
+{#          <button type="submit" onclick="return alert('Are you sure?');">#}
 {#<!--            <a class="nav-link" href="{% url 'logout' %}">Log-out</a>-->#}
 {#<!--          </button>-->#}
-            <a class="nav-link" href="{% url 'logout' %}" onclick="return alert('Are you sure?');">Log-out</a>
+            <button type="submit" onclick="return confirm('Are you sure?');">
+            <a class="nav-link" href="{% url 'logout' %}">Log-out</a>
         </li>
-{#      {% endif %}#}
+      {% endif %}
     </ul>
   </div>
 </nav>
